<resources>
    <string name="app_name">Acedrops Seller</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="terms_and_conditions">By continuing you agree to the Acedrops\n<font color="#1983FF">Terms and Conditions</font></string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="new_here_sign_up">New here? <font color="#1983FF">Sign up</font></string>
    <string name="password_assistance">Password Assistance</string>
    <string name="enter_acedrop_account">Enter your phone number or email account associated with you Acedrops account</string>
    <string name="next">Next</string>
    <string name="create_your_account">Create your account</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_log_in">Already have an account? <font color="#1983FF">Log In</font></string>
    <string name="to_continue_">To continue, complete the verification step. Enter the OTP sent to your mail.</string>
    <string name="verification_required">Verification Required</string>
    <string name="create_new_password">Create new password</string>
    <string name="old_password">Old Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="didn_t_recieve_the_code_resend_now">Didn’t receive the code? <font color="#1983FF">Resend Now</font></string>
    <string name="_00_30">00:30</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="acedrop_seller">Acedrops Seller</string>
    <string name="server_client_id">407572651531-a4uju2hb6p5dpn40vvgat1nlas8m9b9v.apps.googleusercontent.com</string>
    <string name="business_details">Business\nDetails</string>
    <string name="personal_details">Personal\nDetails</string>
    <string name="upload_seller_picture">Upload Seller\nIdentity</string>
    <string name="shop_name">Shop Name</string>
    <string name="no_of_member">No. of member</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="add_product">Add Product</string>
    <string name="enter_product_details">ENTER PRODUCT DETAILS</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="Rs">\u20B9</string>
    <string name="upload_images">Upload Images</string>
    <string name="discount_in">Discount (in %)</string>
    <string name="short_description">Short Description</string>
    <string name="welcome_back_nice_to_see_you">Welcome back, nice to see you!</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="update">Update</string>
    <string name="your_items">Your items</string>
    <string name="owner_full_name">Owner full name</string>
    <string name="upload_shop_picture">Upload Shop Picture</string>
    <string name="click_to_upload_shop_photo">Click to upload Shop photo</string>
    <string name="owner">Owner</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_change_cover_image">Add/Change Cover Image</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_details">Edit Details</string>
    <string name="shop_default_image"><![CDATA[https://firebasestorage.googleapis.com/v0/b/acedrop-seller-1640952554752.appspot.com/o/Shop%2Fclipart1325053.png?alt=media&token=6cefe4ef-8b6b-420c-8224-361c8b97cd71]]></string>
    <string name="orders_dispatched">Orders Dispatched</string>
    <string name="orders_recieved">Orders Received</string>
    <string name="_0">0</string>
    <string-array name="category_array">
        <item>@string/category</item>
        <item>Jewellery</item>
        <item>Paintings and portraits</item>
        <item>Bakery and chocolates</item>
        <item>Crystal And resin art</item>
        <item>Under garments</item>
        <item>Thrift Shops</item>
        <item>Decorative items</item>
        <item>Customised gifts</item>
        <item>Closet and wearable</item>
        <item>Stickers and fun</item>
        <item>DIY\'s</item>
        <item>Makeup and accessories</item>
        <item>Others</item>
    </string-array>

</resources>