<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.auth.SignupFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="22dp"
                app:helperTextTextColor="#FD0320"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/owner_full_name"
                    android:inputType="textPersonName"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textColorHint="#4D000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:helperTextTextColor="#FD0320"
                android:layout_marginTop="16dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:layout_constraintEnd_toEndOf="@+id/name_layout"
                app:layout_constraintStart_toStartOf="@+id/name_layout"
                app:layout_constraintTop_toBottomOf="@+id/name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textColorHint="#4D000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:helperTextTextColor="#FD0320"
                android:layout_marginTop="16dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:layout_constraintEnd_toEndOf="@+id/name_layout"
                app:layout_constraintStart_toStartOf="@+id/name_layout"
                app:layout_constraintTop_toBottomOf="@+id/email_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textColorHint="#4D000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/conf_pass_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:helperTextTextColor="#FD0320"
                android:layout_marginTop="16dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:layout_constraintEnd_toEndOf="@+id/name_layout"
                app:layout_constraintStart_toStartOf="@+id/name_layout"
                app:layout_constraintTop_toBottomOf="@+id/pass_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textColorHint="#4D000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextColor"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="48dp"
                android:text="@string/create_your_account"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:textAllCaps="false"
                android:text="@string/sign_up"
                app:cornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="@+id/name_layout"
                app:layout_constraintStart_toStartOf="@+id/name_layout"
                app:layout_constraintTop_toBottomOf="@+id/conf_pass_layout" />

            <TextView
                style="@style/TextColor"
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/terms_and_conditions"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/signup_btn"
                app:layout_constraintStart_toStartOf="@+id/signup_btn"
                app:layout_constraintTop_toBottomOf="@+id/signup_btn" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationView"
                android:layout_width="216dp"
                android:layout_height="216dp"
                android:layout_marginTop="16dp"
                app:lottie_rawRes="@raw/signup_illustration"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                style="@style/TextColor"
                android:id="@+id/signup_to_signin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/already_have_an_account_log_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
