<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.dash.UploadProductFragment">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:elevation="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/ic_vector__10_"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="11dp" />

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/mulish"
        android:gravity="start"
        android:text="@string/edit_details"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.appcompat.widget.Toolbar>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.auth.AuthActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shop_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="22dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:helperTextTextColor="#FD0320"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shop_name"
                android:inputType="textPersonName"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textColorHint="#4D000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/member_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:helperTextTextColor="#FD0320"
            app:layout_constraintEnd_toEndOf="@+id/shop_name_layout"
            app:layout_constraintStart_toStartOf="@+id/shop_name_layout"
            app:layout_constraintTop_toBottomOf="@+id/shop_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/no_of_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_of_member"
                android:inputType="number"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textColorHint="#4D000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phn_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:helperTextTextColor="#FD0320"
            app:layout_constraintEnd_toEndOf="@+id/shop_name_layout"
            app:layout_constraintStart_toStartOf="@+id/shop_name_layout"
            app:layout_constraintTop_toBottomOf="@+id/member_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phn_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textColorHint="#4D000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:helperTextTextColor="#FD0320"
            app:layout_constraintEnd_toEndOf="@+id/member_layout"
            app:layout_constraintStart_toStartOf="@+id/member_layout"
            app:layout_constraintTop_toBottomOf="@+id/phn_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/description"
                android:inputType="textCapSentences|textMultiLine"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textColorHint="#4D000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:helperTextTextColor="#FD0320"
            app:layout_constraintEnd_toEndOf="@+id/description_layout"
            app:layout_constraintStart_toStartOf="@+id/description_layout"
            app:layout_constraintTop_toBottomOf="@+id/description_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="textPostalAddress|textMultiLine"
                android:lines="3"
                android:gravity="start"
                android:maxLines="3"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textColorHint="#4D000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_btn"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/mulish_semi_bold"
            android:text="@string/update"
            android:textAllCaps="false"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/address_layout"
            app:layout_constraintStart_toStartOf="@+id/address_layout"
            app:layout_constraintTop_toBottomOf="@+id/address_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</LinearLayout>